# declaude

./: .gitignore  LICENSE  README.md  declaude.py  install.ps1  install.sh  pyproject.toml
src/declaude/: __init__.py  __main__.py
tests/: test_scrub.py
web/: index.html  package-lock.json
web/src/: App.css  App.jsx  i18n.js  index.css
