[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "declaude"
dynamic = ["version"]
description = "Remove Claude/AI attribution from a GitHub repo: clean history, force-push, and refresh the Contributors graph."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "ediiloupatty" }]
keywords = ["git", "github", "claude", "attribution", "co-authored-by", "filter-repo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "git-filter-repo>=2.38",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ediiloupatty/declaude"
Repository = "https://github.com/ediiloupatty/declaude"
Issues = "https://github.com/ediiloupatty/declaude/issues"

[project.scripts]
declaude = "declaude:_entry"

[tool.hatch.version]
path = "src/declaude/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/declaude"]

[tool.hatch.build.targets.sdist]
include = ["src/declaude", "README.md", "LICENSE", "tests"]
